Content edits from Mike post beta test

--- a/Negotiation3/reports/compare.html
+++ b/Negotiation3/reports/compare.html
@@ -36,8 +36,8 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>Understanding other parties</td>
-					<td align="center" style="font-size: 16px">5</td>
+					<td>Creating value</td>
+					<td align="center" style="font-size: 16px">4</td>
 					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
 				</tr>
 				<tr>
@@ -46,8 +46,8 @@
 					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
 				</tr>
 				<tr>
-					<td>Creating value</td>
-					<td align="center" style="font-size: 16px">4</td>
+					<td>Understanding other parties</td>
+					<td align="center" style="font-size: 16px">5</td>
 					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
 				</tr>
 				<tr>
@@ -60,7 +60,7 @@
 	</div>
 
 	<div>
-		<p style="margin: 20px;">Those are simply averages, of course. There's a lot of variation from one person to another. But note that people tend to be most confident about their ability to understand the needs and feelings of other people. By contrast, many worry about underperformance when it comes to results.</p> 
+		<p style="margin: 20px;">Those are simply averages, of course. There's a lot of variation from one person to another. But note that people tend to be most confident about their ability to understand the needs and feelings of other people. By contrast, many worry about underperforming when it comes to results.</p> 
 	<div>
 		
 	<div>
@@ -68,7 +68,7 @@
 
 		<ul style="margin: 20px 20px 20px 0px;">
 			<li>Do most people you deal with actually get inferior results?</li>
-			<li>Is the strength of most negotiators you know actually is their ability to understand others? </li>
+			<li>Do most negotiators you know really excel at understanding others?</li>
 		</ul>
 		
 		<p style="margin: 20px;">The fact is that our self-perceptions do not always match reality. Even so, those beliefs still influence behavior, especially when it comes to interacting with others. </p> 
