--- a/Negotiation3/reports/michael_wheeler.html
+++ b/Negotiation3/reports/michael_wheeler.html
@@ -18,18 +18,17 @@
 </head>
 <body>
 	<div align="center">
-        <img src="mw.jpg" width="125px" height="125px" class="img-circle">
+        <img src="mw.jpg" width="115px" height="115px" class="img-circle">
 	</div>
 	<div>
-        <p style="margin: 20px;">
-            <strong>Michael Wheeler</strong> is an award-winning author, professor, and adviser whose work is at the forefront of negotiation scholarship and practice. Over the past twenty years at the <strong><a href="http://www.hbs.edu/" style="color:#ff9f33">Harvard Business School</a></strong> he has taught negotiation to thousands of MBA students and executive program participants. He also counsels corporate clients, trade organizations, and government agencies on negotiation issues in the United States and abroad.</p>
+        <p style="margin: 15px 20px 20px 20px; font-size: 14px;">
+            <strong>Michael Wheeler</strong> is an award-winning author, professor, and adviser whose work is at the forefront of negotiation scholarship and practice. For more than twenty years at the <strong><a href="http://www.hbs.edu/" style="color:#ff9f33">Harvard Business School</a></strong> he has taught negotiation to thousands of MBA students and executive program participants. He also counsels corporate clients, trade organizations, and government agencies on negotiation issues in the United States and abroad.</p>
     </div>
 
     <div class="list-group" style="font-weight:400">
       <a href="http://www.negotiation3-0.com/" class="list-group-item">Negotiation 3.0 Website</a>
       <a href="https://www.linkedin.com/today/influencer/266437464-Michael-Wheeler"  class="list-group-item">LinkedIn Influencer Blog</a>
-      <a href="https://itunes.apple.com/us/book/the-art-of-negotiation/id576508269?mt=11"  class="list-group-item"><i>The Art of Negotiation</i> Book</a>
-      <a href="http://www.negotiation3-0.com/contact/"  class="list-group-item">Contact Mike</a>
+      <a href="http://www.amazon.com/The-Art-Negotiation-Improvise-Agreement/dp/1451690428"  class="list-group-item"><i>The Art of Negotiation</i> Book</a>
     </div>    
 
 	<div style="height:100px">
