--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -21,11 +21,11 @@
 </head>
 <body>
 	<div align="center">
-        <img src="image-7.png" width="125px" height="125px" class="img-circle">
+        <img src="image-7.png" width="115px" height="115px" class="img-circle">
 	</div>
 	<div>
-		<p style="margin: 20px;">You rated yourself <strong>%@</strong> compared to people you typically negotiate with. The reality is that it is hard to rate our overall effectiveness. After all, you usually know only your half of the story: did you leave some value on the table; did you stress an important relationship? The other side may not tell you, so there's plenty of room for self-doubt and worry.</p> 
-	<p style="margin: 20px;">Good negotiators are often modest about their skills. That humility serves them well, as it prompts them to prepare their strategy carefully. They also know that they have to be agile, ready to cope with changes in circumstances and whatever approach their counterpart takes, be it collaborative or competitive.</p>
+		<p style="margin: 15px 20px 20px 20px;">You rated yourself <strong>%@</strong> compared to people you typically negotiate with. The reality is that it is hard to rate your overall effectiveness. After all, you usually know only your half of the story: did you leave some value on the table; did you stress an important relationship? The other side may not tell you, so there's plenty of room for self-doubt and worry.</p> 
+	<p style="margin: 20px;">Good negotiators are often modest about their skills. That humility serves them well, as it prompts them to prepare their strategy carefully. They also know that they have to be agile, ready to cope with changes in circumstances and whether other parties are cooperative or competitive.</p>
     <p style="margin: 20px;">Ideally, of course, you'd like to excel at each of the four skills: asserting your interests, understanding others, creating value, and claiming your share. But each of them involves a tradeoff. By being more open, you may encourage a cooperative response. But you could also risk exploitation, depending on whom you're dealing with. Likewise, firmly asserting your interests may win you a larger share, but if the other party also digs in, it could be harder for both of you to find creative solutions.</p>
     <p style="margin: 20px;"><strong>Here are some tips for improving your effectiveness:</strong></p>
    	</div>
@@ -43,7 +43,7 @@
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Inquire.</strong> Without realizing it, many negotiators fail to test their assumptions about the other parties' needs and perceptions.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Listen deeply.</strong> Don't prejudge. Be alert for ideas you can build on.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Consult your own feelings.</strong> If you are anxious, maybe they are feeling that, too.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" id="example1" data-toggle="popover" data-placement="left" title="Bill Ury" data-content="Author of &ldquo;Getting to Yes and Getting Past No&rdquo;" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, with a broad perspective on everything that is going on.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" id="example1" data-toggle="popover" data-placement="left" title="Bill Ury" data-content="Author of &ldquo;Getting to Yes&rdquo; and &ldquo;Getting Past No&rdquo;" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, with a broad perspective on everything that is going on.</li>
 			</ul>
 	    </div>
 	  </div>
@@ -57,7 +57,7 @@
 	    </div>
 	    <div id="collapseTwo" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Build up your <strong><a href="javascript://" id="example2" data-toggle="popover" data-placement="bottom" title="BATNA" data-content="an acronym for &ldquo;Best Alternative to a Negotiated Agreement&rdquo;" style="color:#ff9f33">BATNA</a></strong> (your walkaway option if there's no deal). The more confident you are about your alternatives, the more secure you'll be negotiating.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Build up your <strong><a href="javascript://" id="example2" data-toggle="popover" data-placement="bottom" title="BATNA" data-content="an acronym for &ldquo;Best Alternative to a Negotiated Agreement&rdquo;" style="color:#ff9f33">BATNA</a></strong> (your walkaway option if there's no deal). The more confident you are about your alternatives, the more secure you'll be when you negotiate.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Focus on their <strong>BATNA</strong> (their walkaway). Just because you need them doesn't mean that they don't need you just as much.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Practice</strong> in low-stakes situations. Try to be more assertive in situations where it doesn't really matter if you come to agreement.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Don't oversell.</strong> Research shows that people in weaker positions tend to talk too much.</li>
@@ -74,7 +74,7 @@
 	    </div>
 	    <div id="collapseThree" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't get <strong><a href="javascript://" id="example3" data-toggle="popover" data-placement="bottom" title="Anchoring" data-content="Psychological research shows that people often get unduly influenced by the first offer they hear, even if it's unreasonable." style="color:#ff9f33">"anchored."</a></strong> Work from your number. Not theirs. Provide solid reasons for your offers and where you have to say no.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't get <a href="javascript://" id="example3" data-toggle="popover" data-placement="bottom" title="Anchoring" data-content="Psychological research shows that people often get unduly influenced by the first offer they hear, even if it's unreasonable." style="color:#ff9f33">"anchored."</a> <strong>Work from your number.</strong> Not theirs. Provide solid reasons for your offers and where you have to say no.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Watch the clock.</strong> If the other party is under a deadline, use that to your advantage.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Try <strong>"post-settlement settlement."</strong> After reaching a firm agreement, suggest that you review the terms to see if further adjustments might help both parties.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Avoid the <strong>winner's curse.</strong> Don't waste time worrying about whether you could have gotten more. The only way to know just how far you can push is by demanding too much and risking impasse.</li>
@@ -91,10 +91,26 @@
 	    </div>
 	    <div id="collapseFour" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Negotiate how you negotiate.</strong> It's in your interest to encourage constructive behavior.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Use your <strong>interpersonal skills</strong> to build trust.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Proactively guide the process.</strong> Acknowledge the legitimate needs of other parties. Demonstrate your willingness to consider creative solutions. Others may reciprocate.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Use your interpersonal skills to <strong>build trust</strong> and encourage constructive behavior.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Make mutually beneficial trades</strong> by identifying differences in valuation, expectations, and attitudes toward risk.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Don't play the wrong game.</strong> It's hard to haggle and be creative at the same time.</li>
+		    </ul>
+	    </div>
+	  </div>
+	<div class="panel panel-warning">
+	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
+	      <h4 class="panel-title">
+	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+	          <span data-icon="&#xe023;"></span>&nbsp;&nbsp;Bonus tip
+	        </a>
+	      </h4>
+	    </div>
+	    <div id="collapseFive" class="panel-collapse collapse">
+			<ul class="list-group">
+		        <li class="list-group-item" style="text-align: left; font-size:14px">For on-going learning and improvement, use this app <strong>before and after</strong> every negotiation you undertake. It will save your profile each time so that you can compare your intended approach with how the process unfolded. When you review, identify what worked well and see what you might do differently in the future.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Focus especially on skills that aren't your natural strengths. Use the tips in this app and from other resources, as well. Get honest feedback from friends and colleagues. In turn, they likely will appreciate coaching from you.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Finally, monitor your agility over time. Some situations may call for you to be more assertive. Others may offer opportunities for value creation. As you track your progress, see how successful you are at tailoring your approach to the matter at hand and to the people with whom you are negotiating. </li>
 		    </ul>
 	    </div>
 	  </div>
