--- a/Negotiation3/reports/test1.html
+++ b/Negotiation3/reports/test1.html
@@ -18,14 +18,18 @@
 </head>
 <body>
 	<div align="center">
-        <img src="image-4.png" width="125px" height="125px" class="img-circle">
+        <img src="image-4.png" width="115px" height="115px" class="img-circle">
 	</div>
-    <div style="margin:-30px 20px 20px 20px">
+    <div style="margin:-40px 20px 20px 20px">
 		<h4 style="font-weight:400">Part A</h4>
 	</div>
 	
 	<div>
-		<p style="margin: 20px;">Start by rating your relative strength in respect to four essential negotiation skills. You have <strong>16 points</strong> to allocate overall. Remember, you're not judging how good you are at a particular skill. Instead, you're identifying what you are better at - and where else you're not as strong. Be sure you use all 16 points - no more; no less, then tap <strong>Next</strong> above.</p>
+		<p style="margin: 20px;">Start by rating your relative strength in respect to four essential negotiation skills. You have a total of <strong>16 points</strong> to allocate overall.</p>
+
+        <p style="margin: 20px;">Remember, you're not judging how good you are at a particular skill. Instead, you're identifying what you are better at - and where else you're not as strong.</p>
+
+        <p style="margin: 20px;">Be sure you use all 16 points - no more; no less, then tap <strong>Next</strong> above.</p>
 	</div>
 
 	</div>
