--- a/Negotiation3/reports/test2.html
+++ b/Negotiation3/reports/test2.html
@@ -9,7 +9,7 @@
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-6.png");
+            background-image:url("top-banner-2.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
@@ -18,14 +18,16 @@
 </head>
 <body>
 	<div align="center">
-        <img src="image-6.png" width="125px" height="125px" class="img-circle">
+        <img src="image-2.png" width="115px" height="115px" class="img-circle">
 	</div>
-    <div style="margin:-30px 20px 20px 20px">
+    <div style="margin:-40px 20px 20px 20px">
 		<h4 style="font-weight:400">Part B</h4>
 	</div>
 	
 	<div>
-		<p style="margin: 20px;">Now, compare your overall effectiveness relative to people you typically negotiate with. (If you are no better and no worse, than most people, score yourself in the 50th percentile; if you are better (or worse), score yourself accordingly.) Then tap <strong>Next</strong> above to see how your self-assessment compares to other negotiators.</p> 
+		<p style="margin: 20px;">Now, compare your overall effectiveness relative to people you typically negotiate with. <i>[If you are no better and no worse, than most people, score yourself in the 50th percentile; if you are better (or worse), score yourself accordingly.]</i></p>
+
+        <p style="margin: 20px;">Then tap <strong>Next</strong> above to see how your self-assessment compares to other negotiators.</p> 
 			
 	</div>
 
