--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -9,7 +9,7 @@
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-2.png");
+            background-image:url("top-banner-6.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
@@ -18,11 +18,11 @@
 </head>
 <body>
 	<div align="center">
-        <img src="image-2.png" width="125px" height="125px" class="img-circle">
+        <img src="image-6.png" width="115px" height="115px" class="img-circle">
 	</div>
     
 	<div>
-		<p style="margin: 20px;">Everyone negotiates. At work. In their communities. And even at home with their families. Negotiating well means:</p>
+		<p style="margin: 15px 20px 20px 20px;">Everyone negotiates. At work. In their communities. And even at home with their families. Negotiating well means:</p>
 
 		<ul style="margin: 20px 20px 20px 0px;">
 			<li>reaching agreements that might slip through most people's fingers</li>
@@ -30,7 +30,9 @@
 			<li>resolving small differences before they become costly disputes</li>
 		</ul>
 
-		<p style="margin: 20px;">Successful negotiators are well-rounded. They rely on complementary interpersonal, analytic, and problem-solving skills. They also are agile. They adjust their approach to the situation at hand and can deal effectively with different bargaining styles.</p>
+		<p style="margin: 20px;">Successful negotiators are well-rounded. They rely on complementary interpersonal, analytic, and problem-solving skills.</p>
+
+		<p style="margin: 20px;">Great negotiatiors also are agile. They adjust their approach to the situation at hand and deal effectively with different bargaining styles.</p>
 
 		<p style="margin: 20px;"><strong>Negotiation 360&deg;</strong> provides you with a personalized profile of your relational and problem-solving skills. It identifies skills that you can build on and other areas where you can improve. It also highlights key negotiation concepts about creating value and engaging other parties.</p>
 
