--- a/Negotiation3/reports/dilemmas.html
+++ b/Negotiation3/reports/dilemmas.html
@@ -54,16 +54,20 @@
   <div id="demo" >
     <ul>
       <li class="first dragend-page">
-		    <div id="interpersonalDimension" style="margin: 25px auto 5px; width: 280px; height: 180px"></div>
-			<p>Two questions you answered deal with the <strong>interpersonal</strong> dimension of negotiation: asserting yourself and understanding others. Research show that many people feel being relatively good at one of these comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, for example; or appearing cooperative might be misread as weakness.) Nevertheless, some people feel equally good at both skills.</p>
+		    <div id="interpersonalDimension" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
+			<p>Two questions you answered deal with the <strong>interpersonal</strong> dimension of negotiation: asserting yourself and understanding others.</p> 
+      <p>Research shows that many people feel that being relatively good at one of these comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, for example; or appearing cooperative might be misread as weakness.) Nevertheless, some people feel equally good at both skills.</p>
       </li>
       <li class="middle dragend-page">
-		    <div id="outcomeDimension" style="margin: 25px auto 5px; width: 280px; height: 180px"></div>
-			<p>Two other questions address <strong>outcomes</strong>, specifically the ability to create value and capture your share of it. In practice there is often a tension between these two skills. Value-creating trades require understanding the parties' complementary interests.  But if you disclose your interests unilaterally, you might be exploited by others who bluff and conceal their true needs. Value will be created, but they may get most of it.</p>
+		    <div id="outcomeDimension" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
+			<p>Two other questions address <strong>outcomes</strong>, specifically the ability to create value and capture your share of it.</p>
+      <p>In practice there is often a tension between these two skills. Value-creating trades require understanding the parties' complementary interests.  But if you disclose your interests unilaterally, you might be exploited by others who bluff and conceal their true needs. Value will be created, but they may get most of it.</p>
       </li>
       <li class="dragend-page">
-		    <div id="equalRatings" style="margin: 25px auto 5px; width: 280px; height: 180px"></div>
-			<p>Your negotiation results are linked to how you relate to other parties. Think of the interpersonal scale as representing the <strong>means</strong> of negotiation and the outcome scale as the <strong>ends</strong>. Putting the two scales together reveals common bargaining styles. The two scales intersect at the 0-0, with a user who has a rating of 4 for the 4 skills, counting out from the center for each one. That balance may look nice, but some situations demand certain skills more than others.</p>
+		    <div id="equalRatings" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
+			<p>Your negotiation results are linked to how you relate to other parties. Think of the interpersonal scale as representing the <strong>means</strong> of negotiation and the outcome scale as the <strong>ends</strong>.</p>
+      <p>Putting the two scales together reveals common bargaining styles. The lines in the diagram intersect at the 0-0. The example here is for a user who has a rating of 4 for the four skills (counting out from the center for each one).</p>
+      <p>That balance may look nice, but some situations demand certain skills more than others.</p>
       </li>
       <li class="last dragend-page">
 				<div class="row" style="margin: 50px auto 10px">
