More content edits, small style adjustments

--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -22,19 +22,19 @@
 	</div>
     
 	<div>
-		<p style="margin: 15px 20px 20px 20px;">Everyone negotiates. At work. In their communities. And even at home with their families. Negotiating well means:</p>
+		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">Everyone negotiates. At work. In their communities. And even at home with their families. Negotiating well means:</p>
 
-		<ul style="margin: 20px 20px 20px 0px;">
+		<ul style="margin: 20px 20px 20px 0px; font-size: 14px;">
 			<li>reaching agreements that might slip through most people's fingers</li>
 			<li>crafting value-creating solutions</li>
 			<li>resolving small differences before they become costly disputes</li>
 		</ul>
 
-		<p style="margin: 20px;">Successful negotiators are well-rounded. They rely on complementary interpersonal, analytic, and problem-solving skills.</p>
+		<p style="margin: 20px; font-size: 14px;">Successful negotiators are well-rounded. They rely on complementary interpersonal, analytic, and problem-solving skills.</p>
 
-		<p style="margin: 20px;">Great negotiatiors also are agile. They adjust their approach to the situation at hand and deal effectively with different bargaining styles.</p>
+		<p style="margin: 20px; font-size: 14px;">Great negotiatiors also are agile. They adjust their approach to the situation at hand and deal effectively with different bargaining styles.</p>
 
-		<p style="margin: 20px;"><strong>Negotiation 360&deg;</strong> provides you with a personalized profile of your relational and problem-solving skills. It identifies skills that you can build on and other areas where you can improve. It also highlights key negotiation concepts about creating value and engaging other parties.</p>
+		<p style="margin: 20px; font-size: 14px;"><strong>Negotiation 360&deg;</strong> provides you with a personalized profile of your relational and problem-solving skills. It identifies skills that you can build on and other areas where you can improve. It also highlights key negotiation concepts about creating value and engaging other parties.</p>
 
 	</div>
 		 
@@ -44,7 +44,7 @@
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe032;" style="font-size: 24px"></span>
 			</div>
-			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
 				To begin, tap <strong>Next</strong> above and take the short self-assessment test. Then analyze your feedback and review the tips for making better deals. 
 			</div>
 		</div>
