--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -43,13 +43,13 @@
 	<div id="container" style="margin: 10px auto 10px; width: 280px; height: 280px"></div>
 	
 	<div>
-		<p style="margin: 20px;">The ratings you entered most closely match those of <strong>%@</strong>. %@ (<i>The group you are the most unlike is that of the <strong>%@</strong></i>.)</p>
+		<p style="margin: 20px; font-size: 14px;">The ratings you entered most closely match those of <strong>%@</strong>. %@ (<i>The group you are the most unlike is that of the <strong>%@</strong></i>.)</p>
 
-		<p style="margin: 20px;">%@</p>
+		<p style="margin: 20px; font-size: 14px;">%@</p>
 		
-		<p style="margin: 20px;">Also, consider the following questions:</p>
+		<p style="margin: 20px; font-size: 14px;">Also, consider the following questions:</p>
 
-		<ol style="margin: 20px 20px 20px 40px;">
+		<ol style="margin: 20px 20px 20px 40px; font-size: 14px;">
 			<li>Is this profile a good fit for most of the negotiations you do?</li><br>
 			<li>If you had to choose, where should your biggest strength be?</li><br>
 			<li>How flexible are you; that is, can you vary your approach according to the situation and the styles of different people you deal with?</li>
@@ -62,7 +62,7 @@
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe030;" style="font-size: 24px"></span>
 			</div>
-			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
 				Go read the Skill-Building Tips section to learn how you can improve your skills.
 			</div>
 		</div>
