--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -59,9 +59,9 @@
         <div class="alert alert-info" style="margin:20px">
           <div class="row">
             <div class="col-xs-1" style="margin-right:10px">
-              <span data-icon="&#xe571;" style="font-size: 24px"></span>
+              <span data-icon="&#xe571;" style="font-size: 30px"></span>
             </div>
-            <div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+            <div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
               To see what we discovered, swipe to the next page. 
             </div>
           </div>
@@ -74,9 +74,9 @@
         <div class="alert alert-info" style="margin:20px">
           <div class="row">
             <div class="col-xs-1" style="margin-right:10px">
-              <span data-icon="&#xe571;" style="font-size: 24px"></span>
+              <span data-icon="&#xe571;" style="font-size: 30px"></span>
             </div>
-            <div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+            <div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
               To see the five profiles, swipe to the pages that follow. 
             </div>
           </div>
