--- a/Negotiation3/reports/test1.html
+++ b/Negotiation3/reports/test1.html
@@ -29,7 +29,7 @@
 
         <p style="margin: 20px;">Remember, you're not judging how good you are at a particular skill. Instead, you're identifying what you are better at - and where else you're not as strong.</p>
 
-        <p style="margin: 20px;">Be sure you use all 16 points - no more; no less, then tap <strong>Next</strong> above.</p>
+        <p style="margin: 20px;">Think about your skills in the kind of negotiations that you often do, or that are most important to you. Be sure you use all 16 points - no more; no less, then tap <strong>Next</strong> above.</p>
 	</div>
 
 	</div>
