Iconography added to links and numbers to feedback page.

--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -32,7 +32,7 @@
 
 		<p style="margin: 20px; font-size: 14px;">Successful negotiators are well-rounded. They rely on complementary interpersonal, analytic, and problem-solving skills.</p>
 
-		<p style="margin: 20px; font-size: 14px;">Great negotiatiors also are agile. They adjust their approach to the situation at hand and deal effectively with different bargaining styles.</p>
+		<p style="margin: 20px; font-size: 14px;">Great negotiators also are agile. They adjust their approach to the situation at hand and deal effectively with different bargaining styles.</p>
 
 		<p style="margin: 20px; font-size: 14px;"><strong>Negotiation 360&deg;</strong> provides you with a personalized profile of your relational and problem-solving skills. It identifies skills that you can build on and other areas where you can improve. It also highlights key negotiation concepts about creating value and engaging other parties.</p>
 
