--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -70,14 +70,14 @@
       </li>
       <li class="dragend-page">
 		    <div id="fiveProfiles" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
-			<p>We found five basic types, each one with a different balance of relative strengths. Some people were closely identified with a particular style, while others where near the boundary between one group and another. In your own dealings, you've likely encountered each one of these types.</p>
+			<p>We found five basic types, each one with a different balance of relative strengths. Some people were closely identified with a particular style, while others were near the boundary between one group and another. In your own dealings, you've likely encountered each one of these types.</p>
         <div class="alert alert-info" style="margin:20px">
           <div class="row">
             <div class="col-xs-1" style="margin-right:10px">
               <span data-icon="&#xe571;" style="font-size: 30px"></span>
             </div>
             <div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-              To see the five profiles, swipe to the pages that follow. 
+              To see the five profiles, swipe through to the pages that follow. 
             </div>
           </div>
         </div>
